--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^19.1.9",
     "@types/twemoji-parser": "^13.1.4",
     "@vitejs/plugin-react": "^5.0.4",
+    "archiver": "^7.0.1",
     "babel-plugin-react-compiler": "19.1.0-rc.3",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
