feat: add ReplyComposer submit limit

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@types/twemoji-parser": "^13.1.4",
+    "@types/twitter-text": "^3.1.10",
     "@vitejs/plugin-react": "^5.0.4",
     "archiver": "^7.0.1",
     "babel-plugin-react-compiler": "19.1.0-rc.3",
@@ -32,6 +33,7 @@
     "he": "^1.2.0",
     "tailwindcss": "^4.1.14",
     "twemoji-parser": "^14.0.0",
+    "twitter-text": "^3.1.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "npm:rolldown-vite@7.1.14",
