--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,10 +13,11 @@ jobs:
     steps:
       - uses: actions/checkout@v5
       - uses: pnpm/action-setup@v4
+        name: Install pnpm
         with:
-          version: 10
           run_install: false
       - uses: actions/setup-node@v5
+        name: Install Node.js
         with:
           node-version: 22
           cache: 'pnpm'
